Prevent vertical display overflow

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ main {
     border: 1px solid black;
     padding: 10px;
     overflow-x: scroll;
+    white-space: nowrap;
 }
 
 .keyboard {
